# basket-league-calendar

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  run.sh
.github/workflows/: container.yml
src/: extractor.rs  main.rs
