[package]
name = "basket-calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", default-features = false }
chrono-tz = "0.8.3"
icalendar = "0.15.7"
thirtyfour = "0.31.0"
tokio = { version = "1.32.0", features = ["full"] }
