[package]
name = "basket-calendar"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", default-features = false }
chrono-tz = "0.8.3"
clap = { version = "4.4.3", features = ["derive"] }
derive-getters = "0.3.0"
icalendar = { version = "0.15.7", features = ["chrono-tz"] }
thirtyfour = "0.31.0"
tokio = { version = "1.32.0", features = ["full"] }
